--- a/templates/index.html
+++ b/templates/index.html
@@ -85,8 +85,8 @@
 			</table>
 		</div>
 		<div class="searchb">
-			<form method="get" action="{{ url }}">
-			<input type="text" name="{{ name }}" placeholder="search" autocomplete="off" autofocus>
+			<form method="POST" action="/search">
+				<input type="text" name="text" placeholder="search" autocomplete="off" autofocus>
 			</form>
 		</div>
 	</div>
